# python-ci

./: Makefile  PY_PROJECT_DETAILS.md  README.md  actions.txt  config.py  main.py  main_test.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
